<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning_activities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:ems="20"
        android:hint="@string/enter_parameter"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textSize="25sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@+id/editText"
        android:text="@string/intent_explicit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:text="@string/intent_explicit_with_data_transfer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:text="@string/www_google_com"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:text="@string/application_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:text="@string/phone_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:text="@string/send_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="20"
        />


</RelativeLayout>